 cnp-pci-dss-1.3.3-egress-ut9m4sl.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-egress-7nt9zou
  namespace: kube-system
spec:
  description: "This policy will allow outbound connection using kube-dns in port 53"
  endpointSelector:
    matchLabels:
      k8s-app: gcp-compute-persistent-disk-csi-driver
      pod-template-generation: 1
      controller-revision-hash: 56fd47777c
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
  namespace: kube-system
